<resources>
    <!--로그인-->
    <string name="app_name">HBD</string>
    <string name="title_text">for a special day.</string>
    <string name="id_text">&#160;&#160;&#160;&#160;&#160;&#160;아이디</string>
    <string name="pin_text">&#160;&#160;&#160;&#160;&#160;&#160;비밀번호</string>
    <string name="login_text">로그인</string>
    <string name="signin_text">회원가입</string>
    <!--회원가입-->
    <string name="input_nickname_text">&#160;&#160;&#160;&#160;&#160;&#160;이름</string>
    <string name="input_id_text">&#160;&#160;&#160;&#160;&#160;&#160;아이디(영문 소문자)</string>
    <string name="input_pin_text">&#160;&#160;&#160;&#160;&#160;&#160;비밀번호(최대 8개 숫자)</string>
    <string name="check_pin_text">&#160;&#160;&#160;&#160;&#160;&#160;비밀번호 확인</string>
    <string name="year_text">년</string>
    <string name="month_text">월</string>
    <string name="day_text">일</string>
    <string name="note_text">*생일은 정확하게 입력해주세요*</string>
    <string name="welcome_text">반갑습니다!!</string>
    <string name="back_text">취소</string>
    <string name="go_to_login_text">시작하기</string>
    <!--케이크꾸미기-->
    <string name="make_cake1_text">케이크를 꾸며요!</string>
    <string name="make_cake2_text">꾸밀 재료를 선택한 후, 편지를 작성합니다</string>
    <string name="to_hint_text">to ...</string>
    <string name="rolling_paper_hint_text">생일 축하해</string>
    <string name="from_hint_text">from .</string>
    <string name="decoration_text">장식을 선택해주세요</string>
    <string name="decoration2_text">장식 달기</string>
    <string name="writing_text">메시지를 남겨주세요</string>
    <string name="close_text">닫기</string>
    <!--폴라로이드꾸미기-->
    <string name="make_polaroid1_text">폴라로이드 사진을 만들어요!</string>
    <string name="make_polaroid2_text">폴라로이드의 색상, 사진을 선택한 후 제목을 붙여봐요.</string>
    <string name="make_polaroid3_text">폴라로이드 만들기</string>
    <string name="puload_photo_text">사진업로드하기</string>
    <string name="text_hint_text">6글자까지가능</string>
    <string name="previous_text">이전</string>
    <string name="next_text">다음</string>
    <!--동영상꾸미기-->
    <string name="make_video1_text">친구와 함께한 소중한 추억을 공유해요!</string>
    <string name="make_video2_text">최대 3개의 영상을 업로드 할 수 있습니다.</string>
    <string name="make_video3_text">영상을 업로드</string>
    <string name="make_video_uplode_text">등록</string>
    <!--상장꾸미기-->
    <string name="make_award1_text">친구를 위한 상장을 만들어요</string>
    <string name="make_award2_text">상장의 탬플릿을 선택한 후 글을 작성해봐요</string>
    <string name="make_award_text">상장 만들기</string>
    <string name="award_title_hint_text">친구에게 주고싶은 상은? (ex. 귀염상)</string>
    <string name="award_text_hint_text">상 내용을 적어주세요!\n(ex. 평고 귀엽기 떄문에 이 상장을 수여합니다.</string>
    <string name="award_name_text">본인의 이름을 적어주세요!</string>
    <string name="make_award_choice_text">상장 고르기</string>
    <string name="finish_text">완성</string>
    <string name="new_form_make_text">내 카드 만들러 가기</string>
    <string name="finish_made_link_text">친구 카드 공유하기</string>
    <string name="lt">&lt;</string>
    <string name="gt">&gt;</string>
    <!--main-->
    <string name="hello_text">님 안녕하세요!</string>
    <string name="birthday_text">생일</string>
    <string name="deco_text">꾸며주기</string>
    <string name="my_card_text">내 카드 보기</string>
    <string name="add_link_text">링크 추가하기</string>
    <string name="made_card_text">카드만들기</string>
    <string name="add_text">추가하기</string>
    <string name="to_name">to.</string>
    <!--my페이지-->
    <string name="user_text">님</string>
    <string name="revise_member_text">회원정보수정</string>
    <string name="revise_pin_text">비밀번호 변경</string>
    <string name="logout_text">로그아웃</string>
</resources>