<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/garland_backgroud"
    tools:context=".LoginActivity">

    <!--가랜드 백그라운드에 넣지 않고 따로 넣었을 때-->
    <!--<ImageView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:src="@drawable/garland"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/title_text"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/candlelight"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>
    <EditText
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_rounded_corner"
        android:text="@string/id_text"
        android:textSize="25px"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_rounded_corner"
        android:text="@string/pin_text"
        android:textSize="25px"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:text="@string/login_text"
        android:background="@drawable/rectangle_rounded_corner"
        android:textSize="25px"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_rounded_corner"
        android:textSize="25px"
        android:layout_gravity="center"
        android:text="@string/signin_text"
        android:layout_marginBottom="10dp"/>

    <!--받침대 이미지뷰-->
   <!-- <ImageView
        android:layout_width="312dp"
        android:layout_height="29dp"
        android:src="@drawable/pedestal"
        android:layout_gravity="center"/>-->





</LinearLayout>