<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".PolaroidMakePageActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="33sp"
        android:fontFamily="@font/dongle_regular"
        android:text="@string/make_polaroid1_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="27sp"
        android:fontFamily="@font/dongle_regular"
        android:text="@string/make_polaroid2_text"/>
    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:numColumns="3">
    </GridView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="13dp"
        android:textColor="@color/black_600"
        android:textSize="27sp"
        android:fontFamily="@font/dongle_regular"
        android:background="@drawable/rectangle_resource_black_300"
        android:text="@string/make_polaroid3_text"/>
</LinearLayout>