<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".AwardMakePageActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="33sp"
        android:text="@string/make_award1_text"
        android:fontFamily="@font/dongle_regular"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="27sp"
        android:text="@string/make_award2_text"
        android:fontFamily="@font/dongle_regular"/>
    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:numColumns="2">
    </GridView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:textColor="@color/black_600"
        android:textSize="27sp"
        android:fontFamily="@font/dongle_regular"
        android:background="@drawable/rectangle_resource_black_300"
        android:text="@string/decoration_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:textColor="@color/black_600"
        android:textSize="27sp"
        android:layout_gravity="bottom"
        android:fontFamily="@font/dongle_regular"
        android:background="@drawable/rectangle_resource_black_300"
        android:text="@string/decoration_text"/>
</LinearLayout>