<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".AwardMakePageFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <!--상장 이름 edit view-->
        <EditText
            android:id="@+id/award_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_round"
            android:fontFamily="@font/notosans_regular"
            android:gravity="center"
            android:hint="@string/award_title_hint_text"
            android:paddingStart="5dp"
            android:textSize="18sp" />

        <!--상장 내용 edit view-->
        <!--상장 주는 사람 edit view-->
        <EditText
            android:id="@+id/award_text_edit_text"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:background="@drawable/dialog_background_round"
            android:fontFamily="@font/notosans_regular"
            android:gravity="top"
            android:hint="@string/award_text_hint_text"
            android:padding="20dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/award_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_round"
            android:fontFamily="@font/notosans_regular"
            android:gravity="center"
            android:hint="@string/award_name_text"
            android:paddingStart="5dp"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1" />

        <!--다음 button textView-->
        <TextView
            android:id="@+id/next_button_text_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_resource_perimeter_activation"
            android:fontFamily="@font/notosans_regular"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/next_text"
            android:textColor="@color/black_600"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>