<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".PolaroidMakePageFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="655dp"
        android:orientation="vertical">
        <!--케이크 꾸미기 설명-->
        <TextView
            android:id="@+id/make_polaroid_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/make_polaroid1_text"/>
        <TextView
            android:id="@+id/make_polaroid_subtitle_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/make_polaroid2_text"/>
        <!--케이크 레이아웃-->
        <GridView
            android:id="@+id/make_polaroid_grid_view"
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:numColumns="3">
        </GridView>
    </LinearLayout>
    <!--장식 달기 버튼-->
    <TextView
        android:id="@+id/polaroid_button_text_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_resource_activation"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/make_polaroid3_text"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>